--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2018",
+    "lib": ["ES2018"],
     "module": "commonjs",
     "declaration": true,
     "outDir": "./lib",
