--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# npm & tsc
+node_modules
+lib
+
+# clj
+papiea-lib-clj/papiea-lib-clj.js
+papiea-lib-clj/target
