--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "@types/node": "^10.12.9",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "typescript": "^3.2.2"
   }
 }
