--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
     "lib": ["ES2018"],
     "module": "commonjs",
     "declaration": true,
-    "outDir": "./lib",
-    "strict": true
+    "outDir": "./build",
+    "strict": true,
+    "sourceMap": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
