Configure jest and live reload

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node src/main.ts",
     "test": "jest",
     "dev": "./node_modules/nodemon/bin/nodemon.js",
-    "test-watch": "jest --watch",
+    "test-watch": "jest --watchAll",
     "build": "tsc",
     "build-clj": "cd papiea-lib-clj && lein cljsbuild once",
     "build-clj-auto": "cd papiea-lib-clj && lein cljsbuild auto"
