Spec Database for MongoDB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,12 @@ version: '3'
 services:
         server:
                 build: .
+                environment:
+                        - MONGO_URL=mongodb://mongo:27017
+                        - MONGO_DB=papiea
                 volumes:
                         - ./:/code
+                depends_on:
+                        - mongo
+        mongo:
+                image: mongo:4.1
