Implementation of update_spec

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@types/mongodb": "^3.1.17",
     "@types/node": "^10.12.9",
+    "@types/uuid": "^3.4.4",
     "express": "^4.16.4",
-    "mongodb": "^3.1.10"
+    "mongodb": "^3.1.10",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
