--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "test": "nyc jest",
+    "test": "nyc --all jest",
     "dev": "./node_modules/nodemon/bin/nodemon.js",
     "test-watch": "jest --watchAll",
     "build-clj": "cd papiea-lib-clj && lein cljsbuild once",
@@ -43,6 +43,10 @@
     "extension": [
       ".ts",
       ".tsx"
+    ],
+    "exclude": [
+      "papiea-lib-clj",
+      "__tests__"
     ]
   }
 }
