--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "Shlomi Vaknin",
   "license": "ISC",
   "dependencies": {
+    "@types/js-yaml": "^3.11.4",
     "@types/mongodb": "^3.1.17",
     "@types/node": "^10.12.9",
     "@types/uuid": "^3.4.4",
     "express": "^4.16.4",
+    "js-yaml": "^3.12.0",
     "mongodb": "^3.1.10",
     "uuid": "^3.3.2"
   },
