--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,5 @@ services:
                 build: .
                 volumes:
                         - ./:/code
+        ports:
+                - "3000:3000"
