CircleCI: do not build image every time

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
 
       - checkout
 
-      - run: docker-compose up -d
+      - run: docker-compose pull && docker-compose up -d
 
       - run: ls -l && pwd
 
