--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,7 @@ jobs:
           command: |
             for i in `seq 1 10`;
             do
-              nc -z localhost 3000 && echo Success && exit 0
-              echo -n .
+              docker-compose logs --tail=5 server | grep 'app listening on port' && echo Success && exit 0
               sleep 15
               docker-compose logs --tail=5
             done
