--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node src/main.ts",
     "test": "jest --coverage",
+    "test-ci": "jest --coverage --ci --reporters=default --reporters=jest-junit",
     "dev": "./node_modules/nodemon/bin/nodemon.js",
     "test-watch": "jest --watchAll",
     "build-clj": "cd papiea-lib-clj && lein cljsbuild once",
@@ -24,7 +25,8 @@
     "nyc": "^13.1.0",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "jest-junit": "^5.2.0"
   },
   "jest": {
     "transform": {
