5965_deleted null & changed deleted_at field to optional & added mongo to docker-compose

--- a/.circleci/docker-compose.yml
+++ b/.circleci/docker-compose.yml
@@ -4,3 +4,10 @@ services:
                 build:
                         dockerfile: .circleci/Dockerfile
                         context: .
+                environment:
+                        - MONGO_URL=mongodb://mongo:27017
+                        - MONGO_DB=papiea
+                depends_on:
+                        - mongo
+        mongo:
+                image: mongo:4.1
