--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,15 @@ version: '3'
 services:
         server:
                 build: .
+                environment:
+                        - MONGO_URL=mongodb://mongo:27017
+                        - MONGO_DB=papiea
                 image: quantumobile/papiea:1545645693
                 volumes:
                         - ./:/code
+                depends_on:
+                        - mongo
                 ports:
                         - "3000:3000"
+        mongo:
+                image: mongo:4.1
