--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/mongodb": "^3.1.17",
     "@types/node": "^10.12.9",
     "@types/uuid": "^3.4.4",
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "js-yaml": "^3.12.0",
     "mongodb": "^3.1.10",
