--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.4",
     "js-yaml": "^3.12.0",
     "mongodb": "^3.1.10",
+    "pluralize": "^7.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
