--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "author": "Shlomi Vaknin",
   "license": "ISC",
   "dependencies": {
-    "@types/js-yaml": "^3.11.4",
     "@types/express": "^4.16.0",
+    "@types/js-yaml": "^3.11.4",
     "@types/mongodb": "^3.1.17",
     "@types/node": "^10.12.9",
     "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "express-async-handler": "^1.1.4",
     "js-yaml": "^3.12.0",
     "mongodb": "^3.1.10",
     "pluralize": "^7.0.0",
