--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "express-swaggerize-ui": "^1.0.3",
     "mongodb": "^3.1.10",
     "uuid": "^3.3.2"
   },
