--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
 
       - store_artifacts:
           path: reports
+          destination: reports
 
       - store_artifacts:
           path: coverage
