--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-yaml": "^3.12.0",
     "mongodb": "^3.1.10",
     "pluralize": "^7.0.0",
+    "query-string": "^6.2.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
