--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,8 @@ jobs:
       - image: circleci/node:10
 
     steps:
-      - setup_remote_docker
+      - setup_remote_docker:
+          docker_layer_caching: true
 
       - checkout
 
