52: try to cache node_modules

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -1,5 +1,9 @@
 FROM quantumobile/papiea:1545645693
 
+ADD /code/package.json /package.json
+ENV NODE_PATH /node_modules
+RUN cd / && npm install
+
 COPY . /code
 
 RUN npm install
