--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -1,6 +1,6 @@
 FROM quantumobile/papiea:1545645693
 
-ADD code/package.json /package.json
+ADD package.json /package.json
 ENV NODE_PATH /node_modules
 RUN cd / && npm install
 
