38_added procedure examples & fixed typing for pluralize

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,13 @@
     "declaration": true,
     "outDir": "./build",
     "strict": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "./src/@types/*"
+      ]
+    }
   },
   "include": ["src", "examples"],
   "exclude": ["node_modules", "**/__tests__/*"]
