--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^3.1.10",
     "pluralize": "^7.0.0",
     "query-string": "^6.2.0",
+    "swagger-model-validator": "^3.0.6",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
