Procedure result validation

--- a/__tests__/location_kind_test_data.yml
+++ b/__tests__/location_kind_test_data.yml
@@ -3,6 +3,9 @@ Location:
   title: X/Y Location
   description: Stores an XY location of something
   x-papiea-entity: spec-only
+  required:
+    - x
+    - y
   properties:
     x:
       type: number
