--- a/examples/typescript/location/provider/resources/location.yml
+++ b/examples/typescript/location/provider/resources/location.yml
@@ -3,6 +3,9 @@ Location:
   title: X/Y Location
   description: Stores an XY location of something
   x-papiea-entity: spec-only
+  required:
+    - x
+    - y
   properties:
     x:
       type: number
