--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
         server:
                 build: .
-                image: nutanix-docker.jfrog.io/papiea:latest
+                image: nutanix-docker.jfrog.io/papiea:base
                 volumes:
                         - ./:/code
                 depends_on:
