removed unnecessary pointer from metadata, cuz it must be always present

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
-version: '3'
+version: '3.5'
 services:
         server:
+                container_name: papieajs_server_1
                 build: .
                 image: nutanix-docker.jfrog.io/papiea:base
                 volumes:
@@ -11,3 +12,7 @@ services:
                         - "3333:3000"
         mongo:
                 image: mongo:4.1
+
+networks:
+  default:
+          name: papieajs_default
