--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
                         - mongo
                 ports:
                         - "3333:3000"
+                environment:
+                        - AUTHORIZER=CasbinAllowAnonymousAuthorizer
         mongo:
                 image: mongo:4.1
 
