Set authorizer for autotests

--- a/.circleci/docker-compose.yml
+++ b/.circleci/docker-compose.yml
@@ -6,6 +6,7 @@ services:
                         context: .
                 environment:
                         - JEST_JUNIT_OUTPUT=reports/junit/results.xml
+                        - AUTHORIZER=CasbinAllowAnonymousAuthorizer
                 depends_on:
                         - mongo
         mongo:
