--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/js-yaml": "^3.11.4",
+    "@types/lodash": "^4.14.123",
     "@types/mongodb": "^3.1.17",
     "@types/node": "^10.12.9",
     "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
+    "colors": "^1.3.3",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
     "express-swaggerize-ui": "^1.0.3",
     "js-yaml": "^3.12.0",
+    "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
+    "node-json-color-stringify": "^1.1.0",
     "pluralize": "^7.0.0",
     "query-string": "^6.2.0",
     "swagger-model-validator": "^3.0.6",
