--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-async-handler": "^1.1.4",
     "express-swaggerize-ui": "^1.0.3",
     "js-yaml": "^3.12.0",
+    "mongo-dot-notation-tool": "^1.0.1",
     "mongodb": "^3.1.10",
     "pluralize": "^7.0.0",
     "query-string": "^6.2.0",
