--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.16.0",
     "@types/js-yaml": "^3.11.4",
     "@types/mongodb": "^3.1.17",
+    "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.9",
     "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
@@ -29,6 +30,7 @@
     "js-yaml": "^3.12.0",
     "mongo-dot-notation-tool": "^1.0.1",
     "mongodb": "^3.1.10",
+    "morgan": "^1.9.1",
     "pluralize": "^7.0.0",
     "query-string": "^6.2.0",
     "swagger-model-validator": "^3.0.6",
