--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "express-async-handler": "^1.1.4",
     "express-swaggerize-ui": "^1.0.3",
     "js-yaml": "^3.12.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.10",
     "pluralize": "^7.0.0",
     "query-string": "^6.2.0",
+    "simple-oauth2": "^2.2.1",
     "swagger-model-validator": "^3.0.6",
     "uuid": "^3.3.2",
     "uuid-validate": "0.0.3"
