--- a/__tests__/auth.yaml
+++ b/__tests__/auth.yaml
@@ -1,7 +1,7 @@
 oauth:
-  client_id: id
-  client_secret: secret
-  auth_host: https://auth.com
+  client_id: XXX
+  client_secret: YYY
+  auth_host: 127.0.0.1:9002
   authorize_uri: /oauth2/authorize    # relative to auth_host
   revoke_uri: /oauth2/revoke          # relative to auth_host
   token_uri: /oauth2/token            # relative to auth_host
