moved additional fields to separate part of the dsl

--- a/__tests__/auth.yaml
+++ b/__tests__/auth.yaml
@@ -9,6 +9,9 @@ oauth:
   user_info:
     access_token: ^token.access_token.$JWT.content  # how to get the access_token from the token
     id_token: ^token.id_token.$JWT.content # how to get the access_token from the token
+    user_props:
+      owner: ^id_token.sub
+      tenant: ^id_token.default_tenant
 
     
     # `role` will be set to the first item in the list that is not undefined, so they must be
@@ -41,7 +44,6 @@ oauth:
       tenant-id:    ^id_token.default_tenant
       tenant-fname: ^id_token.given_name
       tenant-lname: ^id_token.last_name
-      owner: ^id_token.sub
 
       # role will be populated by what `role` got resolved into in its section above
       tenant-role: ^role
