--- a/__tests__/auth.yaml
+++ b/__tests__/auth.yaml
@@ -47,4 +47,5 @@ oauth:
 
       # role will be populated by what `role` got resolved into in its section above
       tenant-role: ^role
+      owner: ^id_token.sub
       authorization: $bearer(^token.access_token)
