--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
                         - "3333:3000"
                 environment:
                         - HOT_RELOAD=${HOT_RELOAD:-false}
+                        - MONGO_HOST=mongo
+                        - MONGO_PORT=27017
         mongo:
                 image: mongo:4.1
 
