--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "express-swaggerize-ui": "^1.0.3",
     "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
-    "mongo-dot-notation-tool": "^1.0.1",
     "lodash": "^4.17.11",
+    "mongo-dot-notation-tool": "^1.0.1",
     "mongodb": "^3.1.10",
+    "morgan": "^1.9.1",
     "pluralize": "^7.0.0",
     "query-string": "^6.2.0",
     "simple-oauth2": "^2.2.1",
