--- a/papiea-core/package.json
+++ b/papiea-core/package.json
@@ -1,8 +1,8 @@
 {
   "name": "papiea-core",
-  "version": "1.0.2",
+  "version": "1.0.7",
   "description": "Core 'header' files for papiea",
-  "main": "main.js",
+  "main": "build/core.js",
   "scripts": {
     "clean": "rm -rf build",
     "build": "tsc"
