--- a/papiea-sdk/package.json
+++ b/papiea-sdk/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "express": "^4.17.0",
     "express-async-handler": "^1.1.4",
+    "swagger-model-validator": "^3.0.6",
     "papiea-core": "file:../papiea-core",
     "pluralize": "^7.0.0",
     "wait-port": "^0.2.2"
