--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
     "express-swaggerize-ui": "^1.0.3",
+    "js-sha256": "^0.9.0",
     "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
