--- a/papiea-core/package.json
+++ b/papiea-core/package.json
@@ -9,7 +9,11 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "uuid": "^3.3.3"
+  },
   "devDependencies": {
+    "@types/uuid": "^3.4.5",
     "typescript": "^3.4.5"
   }
 }
