--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -34,7 +34,6 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
-    "express-swaggerize-ui": "^1.0.3",
     "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.13",
@@ -46,6 +45,7 @@
     "query-string": "^6.2.0",
     "simple-oauth2": "^2.2.1",
     "swagger-model-validator": "^3.0.6",
+    "swagger-ui-express": "^4.0.7",
     "uuid": "^3.3.2",
     "uuid-validate": "0.0.3",
     "wait-port": "^0.2.2",
@@ -53,21 +53,22 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/jest": "^23.3.10",
     "@types/js-yaml": "^3.11.4",
     "@types/lodash": "^4.14.123",
     "@types/mongodb": "^3.1.17",
     "@types/morgan": "^1.7.35",
-    "@types/uuid": "^3.4.4",
-    "@types/jest": "^23.3.10",
     "@types/node": "^10.14.7",
     "@types/pluralize": "0.0.29",
     "@types/swagger-parser": "^4.0.2",
+    "@types/swagger-ui-express": "^3.0.1",
+    "@types/uuid": "^3.4.4",
     "@types/uuid-validate": "0.0.0",
-    "papiea-sdk": "file:../papiea-sdk",
     "fast-check": "^1.16.0",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
     "nodemon": "^1.18.8",
+    "papiea-sdk": "file:../papiea-sdk",
     "swagger-parser": "^6.0.2",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
