--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -37,6 +37,7 @@
     "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.13",
+    "mnemonist": "^0.30.0",
     "mongo-dot-notation-tool": "^1.0.1",
     "mongodb": "^3.1.10",
     "morgan": "^1.9.1",
