removed trailing comma

--- a/papiea-core/tsconfig.json
+++ b/papiea-core/tsconfig.json
@@ -8,7 +8,7 @@
     "strict": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "rootDir": "src",
+    "rootDir": "src"
   },
   "exclude": ["node_modules", "**/__tests__/*", "build"]
 }
