--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@types/atob": "^2.1.2",
     "@types/btoa": "^1.2.3",
+    "@types/redis": "^2.8.14",
     "atob": "^2.1.2",
     "axios": "^0.18.1",
     "btoa": "^1.2.1",
@@ -44,6 +45,7 @@
     "papiea-core": "file:../papiea-core",
     "pluralize": "^7.0.0",
     "query-string": "^6.2.0",
+    "redis": "^2.8.0",
     "simple-oauth2": "^2.2.1",
     "swagger-model-validator": "^3.0.6",
     "swagger-ui-express": "^4.0.7",
