added tests for compiler still WIP, some fixes to coverage instrumented code getting into sources

--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -89,6 +89,9 @@
     "collectCoverageFrom": [
       "src/**"
     ],
+    "coveragePathIgnorePatterns": [
+      "papiea-lib-clj"
+    ],
     "testEnvironment": "node"
   }
 }
