changed circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
           command: |
             cp .circleci/docker-compose.yml .
             cp .circleci/Dockerfile .
+            cp .circleci/start.sh .
             docker-compose build
             docker-compose up -d
 
