--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           command: |
             cp .circleci/docker-compose.yml .
             cp .circleci/Dockerfile .
-            cp .circleci/start.sh .
+            cp .circleci/run.sh .
             docker-compose build
             docker-compose up -d
 
