--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -36,6 +36,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
+    "immutable": "^4.0.0-rc.12",
     "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.13",
