multiple bug fixes, optimizations, stream handler

--- a/papiea-engine/docker-compose-debug.yml
+++ b/papiea-engine/docker-compose-debug.yml
@@ -19,3 +19,4 @@ services:
                         - PAPIEA_DEBUG=true
         mongo:
                 image: mongo:4.1
+                command: mongod --replSet rs0
