--- a/.circleci/docker-compose.yml
+++ b/.circleci/docker-compose.yml
@@ -11,3 +11,4 @@ services:
                         - mongo
         mongo:
                 image: mongo:4.1
+                command: mongod --replSet rs0
