--- a/.circleci/docker-compose.yml
+++ b/.circleci/docker-compose.yml
@@ -11,4 +11,4 @@ services:
                         - mongo
         mongo:
                 image: mongo:4.1
-                command: mongod --replSet rs0
+                command: /bin/bash -c 'mongod --replSet rs0 --bind_ip_all & pid=$$! && sleep 5 && mongo --eval "rs.initiate()" && wait $$pid'
