--- a/papiea-sdk/package.json
+++ b/papiea-sdk/package.json
@@ -20,12 +20,13 @@
     "pluralize": "^7.0.0",
     "swagger-model-validator": "^3.0.6",
     "wait-port": "^0.2.2",
+    "papiea-client": "file:../papiea-client",
     "winston": "^3.2.1"
   },
   "description": "",
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.16.1",
-    "typescript": "^3.6.4"
+    "typescript": "^3.8.3"
   }
 }
