Entity Watchlist & Intentful Tasks separated (#356)
* added sane watchlist

* added diff selection strategy, configurable delay, random entity shuffling in watchlist

* adjusted test & bug fixes

* more bug fixes

* fixed bugs & added logging

* addressed comments

* added intentful task support, testing

* fixed numerous bugs, optimized some stuff

* multiple bug fixes, optimizations, stream handler

* removed old code, bug fixes

* cleanups, review comments addressed, improvements to random entity selection

* doubled time to wait for repl set for CI

* added repl Set config to CI

* removed configuration from executable files

* addressed comments about onChange instead of spec and status distinct handlers, Failed semantics, mongo specifics, added test

* added error messages, simple intentful listener

--- a/.circleci/docker-compose.yml
+++ b/.circleci/docker-compose.yml
@@ -11,3 +11,4 @@ services:
                         - mongo
         mongo:
                 image: mongo:4.1
+                command: /bin/bash -c 'mongod --replSet rs0 --bind_ip_all & pid=$$! && sleep 5 && mongo --eval "rs.initiate()" && wait $$pid'
