--- a/papiea-engine/docker-compose-debug.yml
+++ b/papiea-engine/docker-compose-debug.yml
@@ -19,3 +19,4 @@ services:
                         - PAPIEA_DEBUG=true
         mongo:
                 image: mongo:4.1
+                command: /bin/bash -c 'mongod --replSet rs0 --bind_ip_all & pid=$$! && sleep 5 && mongo --eval "rs.initiate()" && wait $$pid'
