--- a/papiea-engine/docker-compose.yml
+++ b/papiea-engine/docker-compose.yml
@@ -17,3 +17,4 @@ services:
                         - LOGGING_LEVEL=${LOGGING_LEVEL:-info}
         mongo:
                 image: mongo:4.1
+                command: /bin/bash -c 'mongod --replSet rs0 --bind_ip_all & pid=$$! && sleep 5 && mongo --eval "rs.initiate()" && wait $$pid'
