--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "Shlomi Vaknin",
   "scripts": {
     "clean-all": "npm --prefix papiea-core run clean &&  npm --prefix papiea-engine run clean && npm --prefix papiea-sdk run clean && npm --prefix papiea-client run clean",
-    "build-all": "npm --prefix papiea-core run build &&  npm --prefix papiea-engine run build && npm --prefix papiea-sdk run build && npm --prefix papiea-client run build",
-    "patch-all": "npm --prefix papiea-core version patch &&  npm --prefix papiea-engine version patch && npm --prefix papiea-sdk version patch && npm --prefix papiea-client version patch",
-    "install-all": "npm --prefix papiea-core install &&  npm --prefix papiea-engine install && npm --prefix papiea-sdk install && npm --prefix papiea-client install",
+    "build-all": "npm --prefix papiea-core run build &&  npm --prefix papiea-engine run build && npm --prefix papiea-client run build && npm --prefix papiea-sdk run build",
+    "patch-all": "npm --prefix papiea-core version patch &&  npm --prefix papiea-engine version patch && npm --prefix papiea-client version patch && npm --prefix papiea-sdk version patch",
+    "install-all": "npm --prefix papiea-core install &&  npm --prefix papiea-engine install && npm --prefix papiea-client install && npm --prefix papiea-sdk install",
     "build-all!": "npm run clean-all && npm run build-all",
     "publish-all": "npm run build-all! && node publish-papiea.js"
   },
