--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -6,6 +6,7 @@ RUN cd /code \
     # Use cached node_modules
     && mv /node_modules /code/papiea-engine/node_modules \
     && npm run install-all \
+    && npm install -g typescript \
     && npm --prefix papiea-engine run build-clj \
     && npm run build-all 
 
