--- a/papiea-sdk/package.json
+++ b/papiea-sdk/package.json
@@ -24,7 +24,8 @@
     "swagger-model-validator": "^3.0.6",
     "wait-port": "^0.2.2",
     "winston": "^3.2.1",
-    "js-yaml": "^3.12.0"
+    "js-yaml": "^3.12.0",
+    "uuid": "^3.3.2"
   },
   "description": "",
   "devDependencies": {
