--- a/papiea-sdk/package.json
+++ b/papiea-sdk/package.json
@@ -7,6 +7,8 @@
     "src"
   ],
   "scripts": {
+    "test": "jest --runInBand --coverage",
+    "test-ci": "jest --runInBand --coverage --ci --reporters=default --reporters=jest-junit",
     "clean": "rm -rf build",
     "build": "tsc"
   },
@@ -17,15 +19,24 @@
     "express": "^4.17.0",
     "express-async-handler": "^1.1.4",
     "papiea-core": "file:../papiea-core",
+    "papiea-client": "file:../papiea-client",
     "pluralize": "^7.0.0",
     "swagger-model-validator": "^3.0.6",
     "wait-port": "^0.2.2",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "js-yaml": "^3.12.0",
+    "uuid": "^3.3.2"
   },
   "description": "",
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.16.1",
-    "typescript": "^3.6.4"
+    "@types/jest": "^23.3.10",
+    "@types/js-yaml": "^3.11.4",
+    "@types/uuid": "^3.4.4",
+    "typescript": "^3.8.3",
+    "ts-jest": "^23.10.5",
+    "jest": "^23.6.0",
+    "jest-junit": "^5.2.0"
   }
 }
