added procedure benchmarks, readme, fixed some procedure bugs & build problems

--- a/papiea-engine/__benchmarks__/package.json
+++ b/papiea-engine/__benchmarks__/package.json
@@ -8,7 +8,8 @@
     "src/"
   ],
   "scripts": {
-    "start": "ts-node src/main.ts -- http://localhost:3333",
+    "bench-local": "ts-node src/main.ts -- http://localhost:3000 localhost 9000",
+    "bench": "ts-node src/main.ts",
     "clean": "rm -rf build",
     "build": "tsc"
   },
