--- a/papiea-sdk/package.json
+++ b/papiea-sdk/package.json
@@ -18,14 +18,14 @@
     "axios": "^0.18.1",
     "express": "^4.17.0",
     "express-async-handler": "^1.1.4",
-    "papiea-core": "file:../papiea-core",
+    "js-yaml": "^3.12.0",
+    "papiea-backend-utils": "file:../papiea-backend-utils",
     "papiea-client": "file:../papiea-client",
+    "papiea-core": "file:../papiea-core",
     "pluralize": "^7.0.0",
     "swagger-model-validator": "^3.0.6",
-    "wait-port": "^0.2.2",
-    "winston": "^3.2.1",
-    "js-yaml": "^3.12.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "wait-port": "^0.2.2"
   },
   "description": "",
   "devDependencies": {
