--- a/papiea-engine/__benchmarks__/docker-compose-benchmark.yml
+++ b/papiea-engine/__benchmarks__/docker-compose-benchmark.yml
@@ -1,13 +1,11 @@
 version: '3.5'
 services:
         papiea-engine:
-                container_name: papiea-engine
-                build: .
+                container_name: papiea-engine-benchmark
+                build: ../.
                 image: nutanix-docker.jfrog.io/papiea:base
                 volumes:
-                        - ../:/code
-                depends_on:
-                        - mongo
+                        - ../../:/code
                 ports:
                         - "3333:3000"
                 environment:
