--- a/papiea-client/package.json
+++ b/papiea-client/package.json
@@ -15,7 +15,7 @@
     "wait-port": "^0.2.2"
   },
   "devDependencies": {
-    "typescript": "^3.8.3",
-    "@types/node": "^12.0.2"
+    "@types/node": "^12.0.2",
+    "typescript": "^3.8.3"
   }
 }
