--- a/papiea-sdk/package.json
+++ b/papiea-sdk/package.json
@@ -34,9 +34,9 @@
     "@types/jest": "^23.3.10",
     "@types/js-yaml": "^3.11.4",
     "@types/uuid": "^3.4.4",
-    "typescript": "^3.8.3",
-    "ts-jest": "^23.10.5",
     "jest": "^23.6.0",
-    "jest-junit": "^5.2.0"
+    "jest-junit": "^5.2.0",
+    "ts-jest": "^23.10.5",
+    "typescript": "^3.8.3"
   }
 }
