--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -5,9 +5,8 @@ WORKDIR /code/papiea-engine
 RUN cd /code \
     # Use cached node_modules
     && mv /node_modules /code/papiea-engine/node_modules \
-    && npm run install-all \
+    && make build_all \
     && npm install -g typescript \
-    && npm --prefix papiea-engine run build-clj \
-    && npm run build-all 
+    && npm --prefix papiea-engine run build-clj
 
-CMD /bin/bash -c "npm run start_differ & npm run start"
+CMD /bin/bash -c "yarn run start_differ & yarn run start"
