--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /code/papiea-engine
 RUN cd /code \
     # Use cached node_modules
     && mv /node_modules /code/papiea-engine/node_modules \
+    && apt-get update \
     && apt-get install -y build-essential \
     && make \
     && npm --prefix papiea-engine run build-clj
