changed yarn ls debug dir

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -15,7 +15,7 @@ ENV PATH="${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH
 
 RUN ls && pwd
 
-RUN ls .yarn/bin
+RUN ls ~/.yarn/bin
 
 RUN cd /code && make
 
