--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -12,7 +12,7 @@ RUN cd /code \
 # Install yarn
 RUN curl -o- -L yarnpkg.com/install.sh | bash
 ENV PATH="${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}"
-RUN echo "export PATH=/new/path:${PATH}" >> /root/.bashrc
+RUN echo "export PATH=/new/path:${PATH}" >> /root/.bashrc && source ~/.bashrc
 
 RUN echo "$PATH"
 
