--- a/papiea-client/package.json
+++ b/papiea-client/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.1",
-    "papiea-core": "file:../papiea-core",
-    "wait-port": "^0.2.2"
+    "papiea-core": "file:../papiea-core"
   },
   "devDependencies": {
     "@types/node": "^12.0.2",
