--- a/papiea-sdk/package.json
+++ b/papiea-sdk/package.json
@@ -24,8 +24,7 @@
     "papiea-core": "file:../papiea-core",
     "pluralize": "^7.0.0",
     "swagger-model-validator": "^3.0.6",
-    "uuid": "^3.3.2",
-    "wait-port": "^0.2.2"
+    "uuid": "^3.3.2"
   },
   "description": "",
   "devDependencies": {
