alternative method of adding yarn to PATH

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -14,6 +14,7 @@ RUN curl -o- -L yarnpkg.com/install.sh | bash
 ENV PATH="${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}"
 RUN echo "export PATH=/new/path:${PATH}" >> /root/.bashrc
 RUN /bin/bash -c "source /root/.bashrc"
+RUN /bin/bash -c ". ~/.bashrc"
 
 RUN echo "$PATH"
 
