--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -12,8 +12,8 @@ RUN cd /code \
 # Install yarn
 RUN curl -o- -L yarnpkg.com/install.sh | bash
 ENV PATH="${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}"
-RUN echo "export PATH=/new/path:${PATH}" >> /root/.bashrc
-RUN /bin/bash -c "source /root/.bashrc"
+RUN echo "export PATH=${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}" >> ~/.bashrc
+RUN /bin/bash -c "source ~/.bashrc"
 RUN /bin/bash -c ". ~/.bashrc"
 
 RUN echo "$PATH"
