--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -11,11 +11,13 @@ RUN cd /code \
 
 # Install yarn
 RUN curl -o- -L yarnpkg.com/install.sh | bash
-ENV PATH="${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}"
+ENV PATH="$HOME/.yarn/bin:${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}"
 RUN echo "export PATH=${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}" >> ~/.bashrc
 RUN /bin/bash -c "source ~/.bashrc"
 RUN /bin/bash -c ". ~/.bashrc"
 
+RUN echo $HOME && cd ~/.yarn/bin && pwd
+RUN 
 RUN /bin/bash -c 'echo $HOME && cd ~/.yarn/bin && pwd'
 
 RUN /bin/bash -c 'echo "$PATH"'
