--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -12,23 +12,21 @@ RUN cd /code \
 # Install yarn
 RUN curl -o- -L yarnpkg.com/install.sh | bash
 ENV PATH="/root/.yarn/bin:${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}"
-RUN echo "export PATH=${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}" >> ~/.bashrc
-RUN /bin/bash -c "source ~/.bashrc"
-RUN /bin/bash -c ". ~/.bashrc"
+#RUN echo "export PATH=${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}" >> ~/.bashrc
+#RUN /bin/bash -c "source ~/.bashrc"
+#RUN /bin/bash -c ". ~/.bashrc"
 
-RUN echo $HOME && cd ~/.yarn/bin && pwd
+#RUN echo $HOME && cd ~/.yarn/bin && pwd
 
-RUN /bin/bash -c 'echo $HOME && cd ~/.yarn/bin && pwd'
+#RUN /bin/bash -c 'echo $HOME && cd ~/.yarn/bin && pwd'
 
-RUN /bin/bash -c 'echo "$PATH"'
+#RUN /bin/bash -c 'echo "$PATH"'
 
-RUN /bin/bash -c 'pwd && ls && env'
+#RUN /bin/bash -c 'pwd && ls && env'
 
-RUN /bin/bash -c 'ls -ltr ~/.yarn/bin'
+#RUN /bin/bash -c 'ls -ltr ~/.yarn/bin'
 
-RUN /bin/bash -c 'which yarn'
-
-RUN /bin/basb -c '~/.yarn/bin/yarn'
+#RUN /bin/bash -c 'which yarn'
 
 RUN cd /code && make
 
