fixed build order

--- a/papiea-engine/Dockerfile
+++ b/papiea-engine/Dockerfile
@@ -25,7 +25,7 @@ RUN lein
 
 # Install yarn
 RUN curl -o- -L yarnpkg.com/install.sh | bash
-ENV PATH="${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin:${PATH}"
+ENV PATH="/root/.yarn/bin:/root/.config/yarn/global/node_modules/.bin:${PATH}"
 
 # Cache .m2
 ADD papiea-lib-clj/project.clj /project.clj
